--- a/cub/test/CMakeLists.txt
+++ b/cub/test/CMakeLists.txt
@@ -222,8 +222,10 @@ function(cub_add_test target_name_var test_name test_src cub_target launcher_id)
       add_test(NAME ${test_target} COMMAND
         "${CMAKE_COMMAND}"
         "-DTEST=$<TARGET_FILE:${test_target}>"
+        "-DTYPE=Catch2"
         -P "${CUB_SOURCE_DIR}/test/run_test.cmake"
       )
+      set_tests_properties(${test_target} PROPERTIES SKIP_REGULAR_EXPRESSION "CCCL_SKIP_TEST")
     else() # Not CUB_SEPARATE_CATCH2
       # Per config catch2 runner
       set(config_c2run_target ${config_prefix}.catch2_test.lid_${launcher_id})
@@ -251,6 +253,7 @@ function(cub_add_test target_name_var test_name test_src cub_target launcher_id)
         add_test(NAME ${config_c2run_target} COMMAND
           "${CMAKE_COMMAND}"
           "-DTEST=$<TARGET_FILE:${config_c2run_target}>"
+          "-DTYPE=Catch2"
           -P "${CUB_SOURCE_DIR}/test/run_test.cmake"
         )
       endif() # per config catch2 runner
@@ -348,7 +351,8 @@ function(cub_add_test target_name_var test_name test_src cub_target launcher_id)
         "${CMAKE_COMMAND}"
         "-DTEST=$<TARGET_FILE:${test_target}>"
         -P "${CUB_SOURCE_DIR}/test/run_test.cmake"
-    )
+      )
+      set_tests_properties(${test_target} PROPERTIES SKIP_REGULAR_EXPRESSION "CCCL_SKIP_TEST")
     endif()
   endif() # Not catch2 test
 endfunction()
